# App

./: .gitignore  Procfile  RustConfig  example_match_schedule.tsv
backend/: Cargo.toml  Rocket.toml  build.rs
backend/src/: announcements.rs  attendance.rs  auth.rs  forms.rs  main.rs  member.rs  notifications.rs  tasks.rs  util.rs
backend/src/api/: first.rs  mod.rs  statbotics.rs
backend/src/api/caldav/: mod.rs
backend/src/api/first/: mod.rs
backend/src/assets/: auto.js  error.js  main.css  sortable.min.js  static.css
backend/src/assets/scripts/: prompt.js
backend/src/db/: cached.rs  json.rs  mod.rs  sql.rs
backend/src/events/: mod.rs
backend/src/routes/: assets.rs  attendance.rs  calendar.rs  inbox.rs  login.rs  members.rs  mod.rs  settings.rs  tasks.rs
backend/src/routes/components/: admin_panel.html  announcement.html  attendance_item.html  attendance_panel.html  checklist.html  edit-event.html  edit.html  event.html  event_attendance_info.html  footer.html  member_entry.html  new.html  worbots-header.html
backend/src/routes/components/scouting/: alliance_breakdown.html  match.html  match_stats.html  my_match.html  stat_card.html  status_update.html  team_coral_breakdown.html  team_matchup_breakdown.html  team_row.html
backend/src/routes/components/tasks/: checklist.html  task.html
backend/src/routes/components/ui/: delete.html  edit.html  new.html  ring.html  unread.html
backend/src/routes/components/util/: error.html  footer.html  head.html  prompt.html  stat_popup.html  worbots-header.html
backend/src/routes/pages/: 404.html  500.html  admin.html  calendar.html  create_event.html  create_member.html  head.html  inbox.html  index.html  login.html  member_list.html  settings.html
backend/src/routes/pages/announcements/: create_announcement.html  details.html  inbox.html
backend/src/routes/pages/errors/: 404.html  500.html
backend/src/routes/pages/events/: calendar.html  create_event.html  create_week.html  details.html
backend/src/routes/pages/members/: create_member.html  details.html  member_list.html
backend/src/routes/pages/scouting/: admin.html  assignments.html  edit_match.html  index.html  match_review.html  teams.html  (+5 more)
backend/src/routes/scouting/: assignments.rs  autos.rs  download.rs  matches.rs  matchup.rs  mod.rs  my_scouting.rs  stats.rs  status.rs  teams.rs
backend/src/scouting/: assignment.rs  autos.rs  game.rs  matches.rs  mod.rs  stats.rs  status.rs
(+31 files in other folders)
