[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
argon2 = { version = "0.5.3", features = ["std"] }
async-trait = "0.1.80"
base64 = "0.22.1"
chrono = { version = "0.4.38", features = ["serde"] }
handlebars = "5.1.2"
password-hash = "0.5.0"
rand = "0.8.5"
rocket = "0.5.1"
serde = "1.0.203"
serde_json = "1.0.117"
thiserror = "1.0.61"
tracing = "0.1.40"
tzfile = "0.1.3"
