[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[features]
sqldb = []
cachedb = []

[dependencies]
anyhow = "1.0.86"
argon2 = { version = "0.5.3", features = ["std"] }
async-trait = "0.1.80"
base64 = "0.22.1"
chrono = { version = "0.4.38", features = ["serde"] }
chrono-tz = "0.9.0"
comrak = "0.26.0"
csv = "1.3.0"
dotenv = "0.15.0"
itertools = "0.13.0"
password-hash = "0.5.0"
rand = "0.8.5"
reqwest = { version = "0.12.5", features = ["rustls-tls"] }
rocket = { git = "https://github.com/rwf2/Rocket.git", features = ["json"] }
rocket_async_compression = { git = "https://github.com/lobsterwise/rocket_async_compression.git" }
serde = "1.0.203"
serde_json = "1.0.117"
sqlx = { version = "0.8.0", features = [
	"postgres",
	"runtime-tokio",
	"tls-rustls",
] }
strum = { version = "0.26.3" }
strum_macros = { version = "0.26.3" }
svg = "0.18.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[build-dependencies]
minify-html = "0.15.0"
lightningcss = "1.0.0-alpha.57"
